--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@polkadot/vue-identicon": "^3.11.3",
+        "vue3-polkadot-vue-identicon": "^1.0.4"
     }
 }
